fix: input validation

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
       <section class="btns">
         <button class="btn" id="convert-btn">Converter</button>
-        <button class="btn" id="clear-btn">Limpar</button>
+        <button class="btn" id="clean-btn">Limpar</button>
       </section>
       <section class="containerOutput">
         <label for="">Resultado da conversão</label>
